# ipcxx

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/ipcxx/: async_queue.h  event_loop.h  ipcxx.h  singleton.h  thread_pool.h
include/ipcxx/async_socket/: basesocket.hpp  tcpserver.hpp  tcpsocket.hpp  udpserver.hpp  udpsocket.hpp
src/: async_queue.cpp  async_socket.cpp  event_loop.cpp  ipcxx.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test_async_queue.cpp  test_async_socket.cpp  test_event_loop.cpp  test_thread_pool.cpp
